--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Nick</a>
+                <a href="#">DEYSI</a>
             </div>
             <nav id="nav">
                 <ul>
@@ -37,8 +37,8 @@
             <div class="contenedor-img">
                 <img src="img/hero.png" alt="">
             </div>
-            <h1>NICK PEREZ</h1>
-            <h2>Ingeniero de Software - Experto UI/UX</h2>
+            <h1>DEYSI DIAZ VILCA</h1>
+            <h2>TECNICA EN COMPUTACION INFORMATICA</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
