--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
-                    <li><a href="#skills" onclick="seleccionar()">SKILLS</a></li>
+                    <li><a href="#skills" onclick="seleccionar()">HABILIDADES</a></li>
                     <li><a href="#curriculum" onclick="seleccionar()">CURRICULUM</a></li>
                     <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
@@ -35,7 +35,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/hero.png" alt="">
+                <img src="foto 2.png" alt="">
             </div>
             <h1>DEYSI DIAZ VILCA</h1>
             <h2>TECNICA EN COMPUTACION INFORMATICA</h2>
@@ -53,8 +53,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Nick Perez.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam unde soluta minima necessitatibus, voluptas consectetur vero officiis quas, explicabo deleniti repellendus aliquid debitis maiores numquam voluptate reprehenderit in delectus dolores.</p>
-
+            <p><span>Hola, soy DEYSI DIAZ VILCA.</span>me considero una persona creativa y com la capacidad de poder solver los problemas con m habilidad 
             <div class="fila">
                 <!-- datos personales -->
                 <div class="col">
@@ -62,15 +61,15 @@
                     <ul>
                         <li>
                             <strong>Cumpleaños</strong>
-                            15-01-1980
+                            03-03-2003
                         </li>
                         <li>
                             <strong>Teléfono</strong>
-                            2555 5454545
+                            931685143
                         </li>
                         <li>
                             <strong>Email</strong>
-                            cw@example.com
+                            deysidiazvilca12@gmail.com
                         </li>
                         <li>
                             <strong>Website</strong>
@@ -78,7 +77,7 @@
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            123 San Luis, Argentina
+                            pachacutec
                         </li>
                         <li>
                             <strong>Cargo</strong>
@@ -137,16 +136,16 @@
     <!-- SECCION SKILLS -->
     <section class="skills" id="skills">
         <div class="contenido-seccion">
-            <h2>Skills</h2>
+            <h2>HABILIDADES</h2>
             <div class="fila">
                 <!-- Technical Skill -->
                 <div class="col">
-                    <h3>Technical Skills</h3>
+                    <h3>HABILIDADES TECNICAS</h3>
                     <div class="skill">
                         <span>Javascript</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span>50%</span>
                             </div>
                         </div>
                     </div>
@@ -154,7 +153,7 @@
                         <span>HTML & CSS</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>89%</span>
+                                <span>50%</span>
                             </div>
                         </div>
                     </div>
@@ -162,7 +161,7 @@
                         <span>Photoshop</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>95%</span>
+                                <span>60%</span>
                             </div>
                         </div>
                     </div>
@@ -170,7 +169,7 @@
                         <span>Wordpress</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>81%</span>
+                                <span>55%</span>
                             </div>
                         </div>
                     </div>
@@ -178,19 +177,19 @@
                         <span>Drupa</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>55%</span>
+                                <span>50%</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Professional Skills -->
                 <div class="col">
-                    <h3>Professional Skills</h3>
+                    <h3>HABILIDADES PROFESIONALES</h3>
                     <div class="skill">
                         <span>Comunicación</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>80%</span>
+                                <span>65%</span>
                             </div>
                         </div>
                     </div>
@@ -206,7 +205,7 @@
                         <span>Creatividad</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>99%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -214,7 +213,7 @@
                         <span>Dedicación</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>65%</span>
+                                <span>60%</span>
                             </div>
                         </div>
                     </div>
@@ -222,7 +221,7 @@
                         <span>Proyect Management</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>94%</span>
+                                <span>55%</span>
                             </div>
                         </div>
                     </div>
@@ -301,10 +300,10 @@
         </div>
     </section>
 
-    <!-- SECCION PORTFOLIO -->
+    <!-- SECCION PORTAFOLIO -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
-            <h2>PORTFOLIO</h2>
+            <h2>PORTAFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
                     <img src="img/p1.jpg" alt="">
