--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             <h1>DEYSI DIAZ VILCA</h1>
             <h2>TECNICA EN COMPUTACION INFORMATICA</h2>
             <div class="redes">
-                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-skype"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="#"><i class="fa-solid fa-rss"></i></a>
@@ -142,7 +141,7 @@
                 <div class="col">
                     <h3>HABILIDADES TECNICAS</h3>
                     <div class="skill">
-                        <span>Javascript</span>
+                        <span>Edicion de videos y fotos</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>50%</span>
